Version 3.4.3.x (2011-xx-xx)
	Fixed bug where the contentEditable state would sometimes be removed if you deleted contents in Gecko.
Version 3.4.3.2 (2011-06-30)
	Fixed bug where deleting all of a paragraph inside a table cell would behave badly in webkit.
	Fixed bugs in tests in firefox5 and WebKit.
	Fixed bug where selection of table cells would produce an exception on Gecko.
	Fixed bug where the caret wasn't properly rendered on Gecko when the editor was hidden.
	Fixed bug where pasting plain text into WebKit would produce a pre element it will now produce more semantic markup.
	Fixed bug where selecting list type formats using the advlist plugin on IE8 would loose editor selection.
	Fixed bug where forced root blocks logic wouldn't properly pad elements created if they contained data attributes.
	Fixed bug where it would remove all contents of the editor if you inserted an image when not having a caret in the document.
	Fixed bug where the YUI compressor wouldn't properly encode strings with only a quote in them.
	Fixed bug where WebKit on iOS5 wouldn't call nodeChanged when the selection was changed.
	Fixed bug where mceFocus command wouldn't work properly on Gecko since it didn't focus the body element.
	Fixed performance issue with the noneditable plugin where it would enable/disable controls to often.
Version 3.4.3.1 (2011-06-16)
	Fixed bug where listboxes were not being handled correctly by JAWS in firefox with the o2k7 skin.
	Fixed bug where custom buttons were not being rendered correctly when in high contrast mode.
	Added support for iOS 5 that now supporting contentEditable in it's latest beta.
	Fixed bug where urls in style attributes with a _ character followed by a number would cause incorrect output.
	Fixed bug where custom_elements option wasn't working properly on IE browsers.
	Fixed bug where custom_elements marked as block elements wouldn't get correctly treated as block elements.